2003-02-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Removed PACKAGE_LOCALE_DIR definition

	* src/Makefile.am (INCLUDES): Set PACKAGE_LOCALE_DIR here

	* configure.in: Skip xft checking if fontcofig present

2003-02-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_fill): Use new paint server signature (does it work?)

	* src/document.c (sp_document_idle_handler): Use new flags signature
	(sp_document_ensure_up_to_date): Ditto

	* src/sp-shape.c (sp_shape_modified): Removed style_modified, instead set
	style here, if flags indicate the need

	* src/sp-text.c (sp_tspan_update): Calculate relative distances here
	(sp_text_update): Ditto

	* src/sp-object.h: Split update and modified flags, involves changes in
	most places actually using them

	* src/gradient-chemistry.c (sp_gradient_ensure_private_normalized): Recycle
	available gradients, instead of always creating new
	(sp_gradient_ensure_radial_private_normalized): Ditto

	* configure.in: Version 0.32pre

2003-02-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_set_shape): Honour single dx and dy attributes

	* configure.in: Added check for fontconfig to retrieve nonstandard include directories

2003-02-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-image.c (sp_image_set): Set canvas item properties in ::update
	(sp_image_update): Implement

	* src/dialogs/fill-style.c (sp_fill_style_widget_paint_changed): Set CMYK before RGB

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_changed): Set CMYK before RGB

2003-02-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-gradient.c (sp_gradient_rebuild_vector): Fix crash if 2 stops coincide

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_generic_glyph_mask_render): Get real
	bounding box, clip to pixblock area for SVP glyphs

	* src/sp-polygon.c (sp_polygon_write): Write points always

2003-02-18  Lauris Kaplinski  <lauris@kaplinski.com>
